Fix about section font size on smaller screens to remove any difference

--- a/styles.css
+++ b/styles.css
@@ -1091,7 +1091,6 @@ p {
     }
     
     .about-text p {
-        font-size: 1.1rem;
         line-height: 1.6;
     }
     
@@ -1232,7 +1231,6 @@ p {
     }
     
     .about-text p {
-        font-size: 1.1rem;
         line-height: 1.5;
     }
     
